# drift-backend

./: .flake8  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  alembic.ini  curation_plan.md  plan.md  pyproject.toml
.claude/: settings.json  settings.local.json
alembic/: env.py
data/: PROTOTYPE_DB_HANDOFF.md  caliber_platforms.json  calibers.json  chamber_accepts_caliber.json  chambers.json  drift.db  drift_prototype.db  lr_rankings.json  manufacturers.json  overall_rankings.json  seed.sql
docs/: ammo_db_research_notes.md  ballistics_package.md  bc_research_prompt.md  bullet-cartridge-qa-report.md  bullet_matching_design.md  bullet_product_line_design.md  caliber_curation_prompt.md  caliber_review.md  cartridge_coverage_plan.md  cartridge_ingestion_progress.md  claude-skills-research.md  cowork_research_notes.md  curation_README.md  data_quality_audit_2026_03.md  db_summary.md  engineering_overview.md  entity_resolution_review.md  optics_reticles_recommendation.md  parser_agreement_hornady.md  parser_agreement_nosler.md  parser_agreement_sierra.md  parser_first_extraction.md  parser_vs_db_hornady.md  parser_vs_db_nosler.md  parser_vs_db_sierra.md  pipeline_README.md  pipeline_plan.md  pipeline_working_notes.md  popularity_research_findings.md  python-code-patterns.md  reducer_strategy_brief.md  rifle_defaults_proposal.md  saami_barrel_length_research.md  saami_test_barrel_lengths.md  sensitivity_analysis.md  v6_resume_handoff.md  wi2-doro-learnings.md  wi2_design_proposal.md  wi2_engineer_guide.md  wi2_research_findings.md
scripts/: backfill_product_line.py  (+35 more)
(+445 files in other folders)
