[project]
name = "drift-ballistics"
version = "0.1.0"
description = "Drift Ballistics ammo & firearms data pipeline and search backend"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "flake8>=7.0",
    "flake8-bugbear>=24.0",
    "isort>=5.13",
]
pipeline = [
    "httpx>=0.27",
    "firecrawl-py>=1.0",
    "anthropic>=0.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dotenv>=1.0",
]
openai = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]
extend-exclude = "alembic/versions/"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["drift"]
extend_skip_glob = ["alembic/versions/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
